# langgraph-ai-agent-patterns

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
capstone/: README.md
docs/: phase3-ui.md
scripts/: run_01_state.py  run_02_tools.py  run_03_structured.py  run_04_hitl.py  run_05_debug.py  run_api.sh
src/agent_patterns/: __init__.py  config.py  llm.py  tracing.py
src/agent_patterns/patterns/: __init__.py
src/agent_patterns/patterns/p01_state_control_flow/: README.md  __init__.py  graph.py  models.py
src/agent_patterns/patterns/p02_tool_use/: README.md  __init__.py  graph.py  models.py  tools.py
src/agent_patterns/patterns/p03_structured_outputs/: README.md  __init__.py  graph.py  models.py
src/agent_patterns/patterns/p04_human_in_the_loop/: README.md  __init__.py  graph.py  models.py
src/agent_patterns/patterns/p05_testing_debugging/: README.md  __init__.py  graph.py
src/agent_patterns/testing/: __init__.py  fixtures.py  mock_llm.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_01_state_control_flow.py  test_02_tool_use.py  test_03_structured_outputs.py  test_04_human_in_the_loop.py  test_05_testing_debugging.py  test_ui_api.py
ui/api/: __init__.py  main.py  registry.py  runner.py  schemas.py
ui/web/: index.html  package-lock.json  package.json
ui/web/src/: App.tsx  styles.css  types.ts
ui/web/src/api/: client.ts
ui/web/src/components/: HitlReview.tsx  PatternForm.tsx  ResultView.tsx
ui/web/src/pages/: Home.tsx  PatternPage.tsx
ui/web/src/utils/: patternLabel.ts
