[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-patterns"
version = "0.1.0"
description = "Practical LangGraph patterns for reliable AI agent workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.3.0",
    "langchain-anthropic>=1.4.0",
    "langsmith>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require live API keys",
]
pythonpath = ["src"]
